--- a/ArtifactMaven/pom.xml
+++ b/ArtifactMaven/pom.xml
@@ -41,7 +41,7 @@
 
 				<configuration>
 
-					<suiteXmlFiles>D:\Maven\ArtifactMaven\testng.xml</suiteXmlFiles>
+					<suiteXmlFiles>C:\Users\Chandan\git\repository\ArtifactMaven\testng.xml</suiteXmlFiles>
 				</configuration>
 
 			</plugin>
