--- a/ArtifactMaven/.classpath
+++ b/ArtifactMaven/.classpath
@@ -43,5 +43,25 @@
 	<classpathentry kind="lib" path="E:/Selenium Library/poi-4.0.1/lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium Library/poi-4.0.1/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium Library/poi-ooxml-3.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Chandan/.m2/repository/org/testng/testng/6.10/testng-6.10.jar" sourcepath="C:/Users/Chandan/.m2/repository/org/testng/testng/6.10/testng-6.10-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.testng"/>
+			<attribute name="maven.artifactId" value="testng"/>
+			<attribute name="maven.version" value="6.10"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Chandan/.m2/repository/org/testng/testng/6.14.3/testng-6.14.3.jar" sourcepath="C:/Users/Chandan/.m2/repository/org/testng/testng/6.14.3/testng-6.14.3-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Chandan/.m2/repository/org/testng/testng/6.14.3/testng-6.14.3-javadoc.jar!/"/>
+			<attribute name="maven.groupId" value="org.testng"/>
+			<attribute name="maven.artifactId" value="testng"/>
+			<attribute name="maven.version" value="6.14.3"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
